services/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emojivoto-route
  namespace: emojivoto
spec:
  parentRefs:
  - name: linkerd-gateway
    namespace: linkerd
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: web-svc
      port: 80
