services/toxic-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: leaderboard-redirect
  namespace: emojivoto
spec:
  parentRefs:
    - name: contour
      namespace: projectcontour
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /leaderboard
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: home.cern
            statusCode: 302
